--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
   "author": "coursar",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.22.9",
-    "@babel/core": "^7.22.9",
-    "@babel/preset-env": "^7.22.9",
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
     "babel-jest": "^29.6.1",
     "babel-loader": "^9.1.3",
     "core-js": "^3.31.1",
     "css-loader": "^6.8.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.3",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
-    "jest": "^29.6.1",
-    "live-server": "^1.1.0",
+    "jest": "^29.6.2",
+    "live-server": "^1.2.2",
     "mini-css-extract-plugin": "^2.7.6",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.9.0"
   },
   "description": ""
 }
