--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
-{
+{{
   "name": "ajs",
   "version": "1.0.0",
+  "repository": {
+    "url": "https://github.com/anastasi89/2.DOM"
+  },
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "test": "jest --coverage",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "coursar",
   "license": "MIT",
@@ -23,6 +28,7 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.3",
+    "gh-pages": "^6.0.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.6.2",
